--- a/main-order-style.css
+++ b/main-order-style.css
@@ -42,6 +42,10 @@ body{
     color: red;
     text-align: center;
 }
+.main-snack-price:hover{
+    font-weight: 600;
+    font-size: 26px;
+}
 .one-snack input{
     position: absolute;
     top: 35%;
