--- a/main-order-style.css
+++ b/main-order-style.css
@@ -3,14 +3,16 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 #main-order{
-    height: calc(100% - 100px);
+    height: calc(100% - 110px);
     width: 45%;
     overflow-y: scroll;
     display: inline-block;
     position: absolute;
     left: 23%;
     padding: 10px;
-    top: 90px;
+    padding-right: 0;
+    padding-top:0;
+    top: 100px;
     padding-bottom: 0;
 }
 .one-snack{
