--- a/order.css
+++ b/order.css
@@ -13,6 +13,7 @@
     margin-top: 50px;
     height: calc(90% - 150px);
     padding:3px;
+    margin-left: 10px;
 }
 #login_zone a{
     width:40%;
