--- a/login.css
+++ b/login.css
@@ -1,73 +1,63 @@
 *{
-    font-family: "Lato","Helvetica Neue","Helvetica",Arial,fontawesome;
+    font-family: "Lato","Helvetica Neue","Helvetica","Arial", fontawesome;
     line-height: 1.4;
-   
 }
-
 body{
-    background: url("https://st2.depositphotos.com/1010652/10710/v/950/depositphotos_107109804-stock-illustration-set-of-sweets-and-snacks.jpg");
+    background: url("https://preview.ibb.co/eraOhp/Background_Signin.png");
+    opacity: 10%;
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
 }
 .container, h1{
-    border-radius: 8px;
-    margin: auto;
+    border-radius: 4px;
     background: white;
     border: hidden;
 }
-
 .container{
-    border-radius: 8px;
-    width: 30%;
-    position: absolute;
-    height: 70%;
-    left: 0 ;right: 0; top: 0; bottom: 0;
+    border-radius: 20px;
+    width: 400px;
+    height: auto;
+    margin: auto;
+    margin-top: 15px;
     text-align: center;
     background-color: #E9EBEE;
+    background: url("https://www.xmple.com/wallpaper/linear-highlight-yellow-green-gradient-1920x1080-c2-fffdc7-c7ffcd-l-50-a-135-f-21.svg");
+    padding-bottom: 5px;
 }
-h1{
-    font-size: 30px;
-    padding: 15px;
-    color: white;
-    background-color: #4267B2;
-}
-
 h3{
     text-align:left;
     padding: 0px 20px;
+    padding-top: 20px;
     margin: 0;
 }
-
 h4{
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding:0;
+    margin: 15px auto;
     text-align: center;
 }
-
 input[type=text], input[type=password] {
+    border-radius: 10px;
     position: relative;
     width: 92%;
     padding: 12px 20px;
-    margin: 5px 15px 22px 15px;
+    margin: 5px 15px 0px 15px;
     display: inline-block;
     border: none;
     background: white;
 }
-
 input[type=text]:focus, input[type=password]:focus {
-    background-color: #ddd;
+    background-color: white;
     outline: none;
     position: relative;
     padding: 12px 20px;
 }
-
 button {
-    background-color:#4267B2;
-    color: white;
-    padding: 15px 20px;
+    background-color: #ffe36a;
+    color: black;
+    padding: 5px 20px;
     width: 30%;
-    margin-top: 10px;
+    margin-top: 20px;
     margin-bottom: 0px;
     border: none;
     border-radius: 8px;
@@ -76,15 +66,15 @@ button {
     font-weight: bold;
     opacity: 0.9;
 }
-
 #redirect-login  {
     padding-top: 0;
 }
-
 #link-signup{
     text-decoration: none;
 }
-
-
-
-
+.logo,.logo-container {
+    width: 468px;
+    height: 200px;
+    margin: auto;
+    margin-top: 5px;
+}
