--- a/order.css
+++ b/order.css
@@ -1,5 +1,5 @@
 #title{
-    background-color: #4267B2;
+    background-color: #ffa31a;
     text-align: center;
     font-family: 'monofett';
     color:whitesmoke;
@@ -19,7 +19,7 @@
     width:40%;
     margin:5%;
     float:left;
-    background-color: #4267B2;
+    background-color: #ffa31a;
     color:whitesmoke;
     font-size: 20px;
     font-weight: bold;
