--- a/user.css
+++ b/user.css
@@ -4,7 +4,7 @@
     display: inline-block;
     height: 100%;
     width: 100%;
-    border: 1px solid #99ccff;
+    border: 1px solid #ffe36a;
     box-shadow: 2px 2px 2px #b3b3b3;
     border-radius: 2px;
     background-color: white;
