--- a/main-order-style.css
+++ b/main-order-style.css
@@ -29,7 +29,7 @@ body{
 }
 .snack-img{
     height: 35%;
-    width: 35%;
+    width: 25%;
 }
 [class ^= "main-snack"]{    
     position: absolute;
@@ -38,6 +38,7 @@ body{
     font-size: 20px;
 }
 .main-snack-name{
+    padding-left: 10px;
     top: 20%;
     font-weight: 700;
 }
@@ -54,6 +55,6 @@ body{
     position: absolute;
     top: 35%;
     right: 4%;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
 }
