--- a/style.css
+++ b/style.css
@@ -96,6 +96,7 @@
     font-size: 20px;
     padding: 10px 20px;
     margin-bottom: 10px;
+    font-weight: bold;
 }
 .number-button {
     display:inline-block;
