--- a/main-order-style.css
+++ b/main-order-style.css
@@ -5,9 +5,10 @@ body{
     margin:0;
 }
 #main-order{
-    z-index: -1;
+    z-index: 0;
     height: calc(100% - 110px);
-    width: 70%;
+    width:65%;
+    left:3%;
     display: inline-block;
     position:absolute;
     padding: 10px;
