--- a/order.css
+++ b/order.css
@@ -28,6 +28,7 @@
     float:left;
     color:#ffa31a;
     font-family: Arial, Helvetica, sans-serif;
+    overflow: hidden;
     border-radius: 19px;
     font-size: 19;
     font-weight: bold;
