--- a/order.css
+++ b/order.css
@@ -30,6 +30,7 @@
     font-family: Arial, Helvetica, sans-serif;
     overflow: hidden;
     font-size: 19;
+    white-space: nowrap;
     font-weight: bold;
     width:60%;
     text-align: center;
