--- a/signup.css
+++ b/signup.css
@@ -66,13 +66,13 @@ button {
     font-weight: bold;
     opacity: 0.9;
 }
-#redirect-login  {
+#redirectLogIn  {
     padding-top: 0;
 }
-#link-signin{
+#linkSignIn{
     text-decoration: none;
 }
-.logo,.logo-container {
+.logo,.logoContainer {
     width: 468px;
     height: 200px;
     margin: auto;
