--- a/signup.css
+++ b/signup.css
@@ -66,13 +66,13 @@ button {
     font-weight: bold;
     opacity: 0.9;
 }
-#redirectLogIn  {
+#redirect-log-in  {
     padding-top: 0;
 }
-#linkSignIn{
+#link-sign-in{
     text-decoration: none;
 }
-.logo,.logoContainer {
+.logo,.logo-container {
     width: 468px;
     height: 200px;
     margin: auto;
