--- a/profile.css
+++ b/profile.css
@@ -42,6 +42,12 @@ body {
 
 .user-zone p {
     padding: 10px;
+    padding-top: 0; 
+    word-wrap:break-word;
+}
+
+.user-zone p input{
+    width: 60%;
 }
 
 button {
