--- a/build-column.css
+++ b/build-column.css
@@ -9,55 +9,7 @@
     padding: 15px;
 }
 
-.cl-1 {
-    width: 8.333333%;
-}
-
-.cl-2 {
-    width: 16.666667%;
-}
-
-.cl-3 {
-    width: 25%;
-}
-
-.cl-4 {
-    width: 33.333333%;
-}
-
-.cl-5 {
-    width: 41.666667%;
-}
-
-.cl-6 {
-    width: 50%;
-}
-
-.cl-7 {
-    width: 58.333333%;
-}
-
-.cl-8 {
-    width: 66.666667%;
-}
-
-.cl-9 {
-    width: 75%;
-}
-
-.cl-10 {
-    width: 83.333333%;
-}
-
-.cl-11 {
-    width: 91.666667%;
-}
-
-.cl-12 {
-    width: 100%;
-}
-
-@media (min-width: 576px) and (max-width: 767px) {
+@media (min-width: 576px) {
     .cl-sm-1 {
         width: 8.333333%;
     }
@@ -96,7 +48,7 @@
     }
 }
 
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 768px) {
     .cl-md-1 {
         width: 8.333333%;
     }
@@ -135,7 +87,7 @@
     }
 }
 
-@media (min-width: 992px) and (max-width: 1199px) {
+@media (min-width: 992px) {
     .cl-lg-1 {
         width: 8.333333%;
     }
