--- a/responsive-design/off-set.css
+++ b/responsive-design/off-set.css
@@ -29,7 +29,7 @@
     .offset-sm-12 { margin-left: 100%;}
 }
 
-/* for median device  */
+/* for medium device  */
 @media screen and (min-width: 768px) {
     .offset-md-1 { margin-left: 8.33%;}
     .offset-md-2 { margin-left: 16.66%;}
