--- a/main-order/order.css
+++ b/main-order/order.css
@@ -1,10 +1,14 @@
+.logo {
+    height: 100%;
+}
 #title {
     z-index: 2;
     position: fixed;
     display: block;
     width: 100%;
     height: 15%;
-    background-color: #ffa31a;
+    /* background-color: #ffa31a; */
+    background-color: #fcf7bb;
     text-align: center;
     font-family: 'monofett';
     color: whitesmoke;
@@ -19,6 +23,7 @@
     text-align: start;
     background-color: #ffe36a;
     border-radius: 19px;
+    border: solid #ffa31a 1px;
     padding: 9px;
 }
 #user-name {
