--- a/main-order/order.css
+++ b/main-order/order.css
@@ -1,15 +1,18 @@
+i {
+    color: red;
+}
 .logo {
     height: 100%;
 }
 #title {
     z-index: 2;
     position: fixed;
-    display: block;
+    display: flex;
     width: 100%;
     height: 15%;
-    /* background-color: #ffa31a; */
     background-color: #fcf7bb;
-    text-align: center;
+    align-items: center;
+    /* text-align: center; */
     font-family: 'monofett';
     color: whitesmoke;
     font-size: 60px;
@@ -58,5 +61,9 @@
 .number-button {
     cursor: pointer;
 }
-
+@media  (min-width: 768px) {
+    .fa {
+        display: none;
+    }
+}
 
