--- a/main-order/order.css
+++ b/main-order/order.css
@@ -2,7 +2,7 @@ i {
     color: red;
 }
 .logo {
-    height: 100%;
+    height: auto;
 }
 #title {
     z-index: 2;
@@ -13,8 +13,6 @@ i {
     background-color: #fcf7bb;
     align-items: center;
     /* text-align: center; */
-    font-family: 'monofett';
-    color: whitesmoke;
     font-size: 60px;
 }
 #user-bar {
@@ -61,6 +59,23 @@ i {
 .number-button {
     cursor: pointer;
 }
+#cart-button { 
+    color: red;
+    border-style: hidden;
+    border-radius: 15px;
+    margin-left: 10%;
+    font-size: 50%;
+    padding: 2%;
+    z-index:10;
+    background: white;
+}
+
+#cart-button:hover {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    align-items: center;
+    filter: brightness(98%);
+}
+
 @media  (min-width: 768px) {
     .fa {
         display: none;
