--- a/responsive-design/build-column.css
+++ b/responsive-design/build-column.css
@@ -1,7 +1,9 @@
 * {
     box-sizing: border-box;
 }
-
+[class*="cl-"] {
+    float: left;
+}
 /* Extra small device */
     .cl-xs-1 { width: 8.33%;}
     .cl-xs-2 { width: 16.66%;}
