--- a/main-order/billstyle.css
+++ b/main-order/billstyle.css
@@ -1,15 +1,18 @@
 #bill-form {
-    height: calc(100% - 120px);
+    height: auto;
+    min-height: 300px;
+    /* height: calc(100% - 120px); */
     z-index: 2;
     position: fixed;
-    top: 16%;
+    top: 11%;
     padding: 10px;
     padding-bottom: 0;
     border: 1px solid #ffe36a;
     background-color: white;
 }
 .main-bill-form {
-    height: 70%;
+    height: auto;
+    min-height: 200px;
     overflow-y: scroll;
     margin-bottom: 5px;
     display: flex;
@@ -32,7 +35,7 @@
     font-weight: 700;
     display: inline-block;
     width: 70%;
-    font-size: 20px;
+    font-size: 16px;
 }
 .price-of-snack {
     top: 60%;
@@ -72,9 +75,12 @@
     font-family: Arial, Helvetica, sans-serif;
     background-color: #ffe36a;
     font-size: 20px;
-    padding: 10px 20px;
-    margin-bottom: 10px;
+    padding: 5px 20px;
+    margin-bottom: 20px;
     font-weight: bold;
+    border-radius: 10px;
+    border: 0;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 .number-button {
     display: inline-block;
@@ -90,7 +96,7 @@
         border-width: 5px;
         border-radius: 20px;
         margin-left: 1%;
-        top: 15%;
+        top: 10%;
         height: auto;
         display: none;
     }
