--- a/login/login.css
+++ b/login/login.css
@@ -3,7 +3,7 @@
     line-height: 1.4;
 }
 body {
-    background: url("https://preview.ibb.co/eraOhp/Background_Signin.png");
+    background: url("../images/background.png");
     opacity: 10%;
     background-position: center center;
     background-size: cover;
