--- a/signup/signup.css
+++ b/signup/signup.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background: url("https://preview.ibb.co/eraOhp/Background_Signin.png");
+    background: url("../images/background.png");
     opacity: 10%;
     background-position: center center;
     background-size: cover;
