--- a/main-order/order.css
+++ b/main-order/order.css
@@ -3,15 +3,17 @@ i {
     -webkit-text-stroke: 2px white;
 }
 .logo {
-    height: 100%;
+    height: 90%;
+    width: auto;
+    margin: auto;
 }
 #title {
     z-index: 2;
     position: fixed;
     display: flex;
     width: 100%;
-    height: 15%;
-    background-color: #fcf7bb;
+    height: 10%;
+    background-color: #fff69b;
     align-items: center;
     /* text-align: center; */
     font-size: 60px;
@@ -20,8 +22,9 @@ i {
     display: block;
     position: absolute;
     box-sizing: border-box;
-    height: 40%;
+    height: 40px;
     bottom: 10%;
+    right: 10px;
     text-align: start;
     background-color: #ffe36a;
     border-radius: 19px;
@@ -33,13 +36,12 @@ i {
     color: #ffa31a;
     font-family: Arial, Helvetica, sans-serif;
     overflow: hidden;
-    font-size: 19;
+    font-size: 18px;
     white-space: nowrap;
     font-weight: bold;
     width: 60%;
     text-align: center;
 }
-
 #user-bar button {
     float: right;
     color: #ffe36a;
@@ -49,7 +51,7 @@ i {
     font-weight: bold;
     border: transparent;
     width: 39%;
-    font-size: 25%;
+    font-size: 16px;
 }
 .number-button:disabled {
     background: rgba(158, 158, 158, 0.3);
@@ -64,22 +66,22 @@ i {
     color: red;
     border-style: hidden;
     border-radius: 15px;
-    margin-left: 10%;
+    margin: 2%;
     font-size: 50%;
     padding: 2%;
-    z-index:10;
+    z-index: 10;
     background: white;
 }
-
 #cart-button:hover {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     align-items: center;
     filter: brightness(98%);
 }
-
 @media  (min-width: 768px) {
     .fa {
         display: none;
     }
 }
-
+.fa {
+    padding: 5px 15px;
+}
