--- a/main-order/order.css
+++ b/main-order/order.css
@@ -62,7 +62,7 @@ i {
 .number-button {
     cursor: pointer;
 }
-#cart-button { 
+#cart-button,#hambuger-button { 
     color: red;
     border-style: hidden;
     border-radius: 15px;
@@ -72,7 +72,7 @@ i {
     z-index: 10;
     background: white;
 }
-#cart-button:hover {
+#cart-button:hover,#hambuger-button:hover {
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     align-items: center;
     filter: brightness(98%);
@@ -82,6 +82,28 @@ i {
         display: none;
     }
 }
-.fa {
-    padding: 5px 15px;
+
+#hambuger-button {
+    text-align: center;
+}
+#hambuger-box {
+    z-index: 3;
+    position: absolute;
+    padding: 0;
+    top: 10%;
+    background: white;
+    border-radius: 19px;
+    border:solid 1px #ffa31a;
+}
+.hambuger-option {
+    text-align: center;
+    color:#ffa31a;
+    padding:19px;
+    border:solid 1px transparent;
+    font-size:139%;
+    border-radius: 19px;
+}
+.hambuger-option:hover {
+    filter: brightness(69%);
+    border:solid 1px #ffa31a;
 }
