--- a/main-order/items.css
+++ b/main-order/items.css
@@ -1,23 +1,16 @@
-* {
-    box-sizing: border-box;
-}
-
 .row::after {
     content: "";
     clear: both;
     display: table;
 }
-
 .one-snack {
     margin: 0;
     padding: 15px;
 }
-
 .snack-img {
     width: 100%;
     height: auto;
 }
-
 .main-snack-name {
     text-align: center;
     font-size: 14px;
@@ -25,18 +18,16 @@
     margin-top: 10px;
     min-height: 51px;
 }
-
 .main-snack-price {
     color: red;
     font-size: 20px;
-    font-weight: 1000;
+    font-weight: 700;
     text-align: center; 
 }
-
-.one-snack:hover, .snack-img:hover {
-    background: rgba(255, 211, 90);
+.one-snack:hover {
+    box-shadow: 1px 1px 20px 2px rgba(255, 211, 90);
+    filter: brightness(110%);
 }
-
 .one-snack input {
     display: block;
     margin: auto;
@@ -44,7 +35,6 @@
     width: 30px;
     height: 30px;
 }
-
 .checkbox-button:checked {
     background-color: #e2a600;
     border-radius: 5px;
