--- a/main-order/main-order-style.css
+++ b/main-order/main-order-style.css
@@ -1,14 +1,12 @@
-body {
+/* body {
     background-color: #fcf7bb;
     opacity: 10%;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-}
-#main-order {
+} */
+/* #main-order {
     z-index: 0;
     height: calc(100% - 110px);
     display: inline-block;
-    position: absolute;
     padding: 0;
-    top: 11%;
-}
+} */
