--- a/main-order/billstyle.css
+++ b/main-order/billstyle.css
@@ -93,14 +93,12 @@
 }
 @media  (max-width: 767.98px) {
     #bill-form {
-        width: 98%;
-        background: rgb(247, 247, 247);
-        border-color: red;
-        border-width: 5px;
-        border-radius: 20px;
-        margin-left: 1%;
-        top: 10%;
+        width: 100%;
+        background: white;
+        border-width: 2px;
         height: auto;
+        right: 0;
+        position: absolute;
         display: none;
     }
     #user-bar {
