--- a/main-order/order.css
+++ b/main-order/order.css
@@ -88,7 +88,9 @@ i {
     border-style: hidden;
     border-radius: 15px;
     margin: auto;
-    font-size: 50px;
+    margin-right: 1%;
+    padding: 0;
+    font-size: 40px;
     z-index: 10;
     background: transparent;
 }
