--- a/main-order/order.css
+++ b/main-order/order.css
@@ -117,7 +117,8 @@ i {
 }
 .hambuger-option {
     text-align: left;
-    color: #ff9800;
+    color: #fff8e1;
+    background: #ffd54f;
     padding: 19px;
     border: solid 1px #ff9800;
     font-size: 28px;
