--- a/main-order/billstyle.css
+++ b/main-order/billstyle.css
@@ -79,6 +79,7 @@
     border-radius: 10px;
     border: 0;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    cursor: pointer;
 }
 .number-button {
     display: inline-block;
