--- a/main-order/order.css
+++ b/main-order/order.css
@@ -68,6 +68,7 @@ i {
     border: transparent;
     width: 39%;
     font-size: 16px;
+    cursor: pointer;
 }
 .container {
     z-index: 1;
@@ -93,6 +94,7 @@ i {
     font-size: 40px;
     z-index: 10;
     background: transparent;
+    cursor: pointer;
 }
 #cart-button {
     color: orange;
@@ -122,6 +124,7 @@ i {
     padding: 19px;
     border: solid 1px #ff9800;
     font-size: 28px;
+    cursor: pointer;
 }
 .hambuger-option:hover {
     filter: brightness(69%);
