--- a/profile/profile.css
+++ b/profile/profile.css
@@ -18,7 +18,7 @@ body {
 }
 
 .main-content {
-    height: 73%; 
+    height: 63%;
     border-radius: 20px;
     position: relative;
     top: 10%;
@@ -70,6 +70,9 @@ button {
 }
 
 @media (min-width: 576px) {
+    .main-content {
+        height: 63%;
+    }
     .avatar {
         width: 40%;
         height: 45%;
@@ -80,9 +83,12 @@ button {
 }
 
 @media (min-width: 768px) {
+    .main-content {
+        height: 68%;
+    }
     .avatar {
         width: 40%;
-        height: 45%;
+        height: 50%;
         padding: 20px;
     }
     button {
