--- a/profile/profile.css
+++ b/profile/profile.css
@@ -2,7 +2,6 @@
     font-family: "Lato", "Helvetica Neue", "Helvetica", "Arial", fontawesome;
     line-height: 1.4;
 }
-
 body {
     background: url("../images/background.png") no-repeat center center fixed;;
     height: 100%;
@@ -16,49 +15,121 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
 }
-
-.main-content {
-    height: 63%;
-    border-radius: 20px;
-    position: relative;
-    top: 10%;
-    margin-top: 15px;
-    text-align: center;
-    background-color: #E9EBEE;
-    background: url("https://www.xmple.com/wallpaper/linear-highlight-yellow-green-gradient-1920x1080-c2-fffdc7-c7ffcd-l-50-a-135-f-21.svg");
-    padding-bottom: 5px;
+.profile-sidebar {
+    padding: 20px 0px 10px 0px;
+    background: #fffde7;
+    border: 1px solid #ffe082;
+    margin: 0px 15px; 
 }
-
-.user-zone {
-    font-size: 18;
-    display: inline-block;
-    width: 100%;
-    font-weight: 700;
+.profile-content {
+    padding: 20px;
+    background: #fffde7;
+    min-height: 480px;
+    border: 1px solid #ffe082;
+    margin-left: 15px;
+    margin-right: 15px; 
 }
-
+.profile-user-avatar {
+    float: none;
+    margin: 0 auto;
+    width: 126px;
+    height: 126px;
+    border-radius: 50% !important;
+}
 .avatar {
-    padding: 10px;
+    max-width: 100%;
     display: block;
-    width: 35%;
-    height: 40%;
-    margin: auto;
-    margin-top: 5px;
 }
-
-.user-zone p {
-    padding: 10px;
-    padding-top: 0; 
-    word-wrap: break-word;
+.profile-username {
+    text-align: center;
+    color: #ff8f00;
+    font-size: 16px;
+    font-weight: 600;
+    margin-bottom: 7px;
+    margin-top: 15px;
 }
-
-.user-zone p input {
-    width: 60%;
+.nav {
+    text-decoration: none;
+    margin-top: 0;
+    list-style-type: none;
 }
-
+ul {
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 0px;
+}
+.nav > li > a {
+    position: relative;
+    display: block;
+    padding: 10px 15px;
+}
+a {
+    text-decoration: none;
+}
+.profile-menu {
+    margin-top: 30px;
+    min-height: 120px;
+}
+.profile-menu ul li.active a {
+    color: #e65100;
+    background-color: #ffecb3;
+    border-left: 2px solid #ffb300;
+    margin-left: -2px;
+}
+.profile-menu ul li a {
+    color: #93a3b5;
+    font-size: 14px;
+    font-weight: 400;
+}
+a:hover {
+    color: #5b9bd1;
+}
+.cl-md-2 {
+    position: relative;
+    min-height: 1px;
+}
+.profile-title {
+    text-align: center;
+    font-weight: 400;
+    margin: 0;
+    margin-bottom: 15px; 
+}
+.info-bar {
+    display: block;
+    min-height: 35px;
+    margin-bottom: 5px;
+}
+.property {
+    display: inline-block;
+    max-width: 100%;
+    font-weight: 700;
+    text-align: right;
+    padding: 6px;
+}
+h4 {
+    display: block;
+    width: 100%;
+    padding: 6px 12px;
+    font-weight: 400;
+    margin: 0;
+}
+.description {
+    display: block;
+    max-width: 100%;
+    height: 100px;
+    border: 1px solid gray;
+    padding: 5px;
+    margin-top: 10px; 
+}
 button {
     background-color: #ffe36a;
     color: black;
     padding: 5px 10px;
+    margin-top: 30px; 
     margin-bottom: 0px;
     border: none;
     border-radius: 8px;
@@ -66,16 +137,14 @@ button {
     font-size: 18px;
     font-weight: bold;
     opacity: 0.9;
-
+}
+input {
+    padding: 6px 12px;
 }
 
 @media (min-width: 576px) {
     .main-content {
         height: 63%;
-    }
-    .avatar {
-        width: 40%;
-        height: 45%;
     }
     button {
         padding: 5px 20px;
@@ -85,11 +154,6 @@ button {
 @media (min-width: 768px) {
     .main-content {
         height: 68%;
-    }
-    .avatar {
-        width: 40%;
-        height: 50%;
-        padding: 20px;
     }
     button {
         padding: 5px 15px;
