--- a/profile/profile.css
+++ b/profile/profile.css
@@ -14,6 +14,7 @@ body {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
+    overflow: auto;
 }
 .profile-sidebar {
     padding: 20px 0px 10px 0px;
@@ -24,7 +25,7 @@ body {
 .profile-content {
     padding: 20px;
     background: #fffde7;
-    min-height: 480px;
+    min-height: 50%;
     border: 1px solid #ffe082;
     margin-left: 15px;
     margin-right: 15px; 
@@ -72,7 +73,6 @@ a {
 }
 .profile-menu {
     margin-top: 30px;
-    min-height: 120px;
 }
 .profile-menu ul li.active a {
     color: #e65100;
@@ -101,7 +101,7 @@ a:hover {
 .info-bar {
     display: block;
     min-height: 35px;
-    margin-bottom: 5px;
+    margin-bottom: 10px;
 }
 .property {
     display: inline-block;
@@ -142,12 +142,37 @@ input {
     padding: 6px 12px;
 }
 
-@media (min-width: 576px) {
-    .main-content {
-        height: 63%;
+@media (max-width: 575px) {
+    .property {
+        text-align: left;
+    }
+    .profile-menu {
+        text-align: center;
+    }
+    .profile-content {
+        height: 500px;
     }
     button {
-        padding: 5px 20px;
+        padding: 10px 20px;
+    }
+    body {
+        font-size: 13px;
+    }
+
+}
+
+@media (min-width: 576px) {
+    body {
+        font-size: 13px;
+    }
+    .profile-menu {
+        text-align: center;
+    }
+    .profile-content {
+        height: 400px;
+    }
+    .main-content {
+        height: 60%;
     }
 }
 
