--- a/profile/profile.css
+++ b/profile/profile.css
@@ -5,7 +5,6 @@
 body {
     background: url("../images/background.png") no-repeat center center fixed;;
     height: 100%;
-    overflow: hidden;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -14,7 +13,6 @@ body {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    overflow: auto;
 }
 .profile-sidebar {
     padding: 20px 0px 10px 0px;
@@ -150,13 +148,14 @@ input {
         text-align: center;
     }
     .profile-content {
-        height: 500px;
+        min-height: 500px;
     }
     button {
         padding: 10px 20px;
     }
     body {
         font-size: 13px;
+        overflow: auto;
     }
 
 }
@@ -164,23 +163,18 @@ input {
 @media (min-width: 576px) {
     body {
         font-size: 13px;
+        overflow: auto;
     }
     .profile-menu {
         text-align: center;
     }
     .profile-content {
-        height: 400px;
-    }
-    .main-content {
-        height: 60%;
+        min-height: 400px;
     }
 }
 
 @media (min-width: 768px) {
-    .main-content {
-        height: 68%;
-    }
-    button {
-        padding: 5px 15px;
+    .profile-content {
+        min-height: 63%;
     }
 }
