--- a/profile/profile.css
+++ b/profile/profile.css
@@ -36,7 +36,8 @@ body {
     border-radius: 50% !important;
 }
 .avatar {
-    max-width: 100%;
+    height: 100%;
+    width: 100%;
     display: block;
 }
 .profile-username {
