--- a/login/login.css
+++ b/login/login.css
@@ -6,7 +6,7 @@
 body {
     background: url("../images/background.png") no-repeat center center fixed;;
     height: 100%;
-    overflow: hidden;
+    overflow: auto;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -15,6 +15,7 @@ body {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
+
 }
 .container, h1 {
     border-radius: 4px;
@@ -22,10 +23,9 @@ body {
     border: hidden;
 }
 .container {
-    border-radius: 20px;
-    width: 420px;
+    border-radius: 20px;    
     height: auto;
-    margin-top: 50px;
+    margin-top: 30px;
     text-align: center;
     background-color: #E9EBEE;
     background: url("https://www.xmple.com/wallpaper/linear-highlight-yellow-green-gradient-1920x1080-c2-fffdc7-c7ffcd-l-50-a-135-f-21.svg");
@@ -62,7 +62,6 @@ button {
     background-color: #ffe36a;
     color: black;
     padding: 5px 20px;
-    width: 30%;
     margin-top: 20px;
     margin-bottom: 0px;
     border: none;
@@ -79,35 +78,29 @@ button {
     text-decoration: none;
 }
 .logo {
-    width: 83.33%;
-    height: 200px;
-    margin-top: 20px;
+    height: 180px;
+    margin-top: 10px;
 }
-.logo-container {
-    width: 420px;
+
+@media (max-width: 575px) {
+    h4 {
+        font-size: 15px;
+    }
 }
 
 @media (min-width: 576px) {
     .logo {
-        width: 420px;
         height: 200px;
         margin-top: 10px;
-    }
-    .container {
-        margin-top: 30px;
-        width: 410px;
     }
 }
 
 @media  (min-width: 768px) {
     .logo {
-        width: 400px;
-        height: 200px;
-        margin-top: 10px;
+        height: 230px;
     }
-    .container {
-        margin-top: 30px;
-        width: 390px;
+    br {
+        display: none;
     }
 }
 
