--- a/login/login.css
+++ b/login/login.css
@@ -2,11 +2,10 @@
     font-family: "Lato", "Helvetica Neue", "Helvetica", "Arial", fontawesome;
     line-height: 1.4;
 }
-
 body {
-    background: url("../images/background.png") no-repeat center center fixed;;
+    background: url("../images/background.png") no-repeat center center fixed;
     height: 100%;
-    overflow: auto;
+    overflow: hidden;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -17,15 +16,24 @@ body {
     background-repeat: no-repeat;
 
 }
+.main-content {
+    position: relative;
+    display: block;
+    top: 2%;
+    width: 100%;
+    max-width: 360px;
+    height: 100%;
+    margin: auto;
+}
 .container, h1 {
     border-radius: 4px;
     background: white;
     border: hidden;
 }
 .container {
-    border-radius: 20px;    
+    border-radius: 20px;
     height: auto;
-    margin-top: 30px;
+    margin-top: 15px;
     text-align: center;
     background-color: #E9EBEE;
     background: url("https://www.xmple.com/wallpaper/linear-highlight-yellow-green-gradient-1920x1080-c2-fffdc7-c7ffcd-l-50-a-135-f-21.svg");
@@ -40,6 +48,7 @@ h3 {
 h4 {
     padding: 0;
     margin: 15px auto;
+    font-size: 14px;
     text-align: center;
 }
 input[type=text], input[type=password] {
@@ -62,6 +71,7 @@ button {
     background-color: #ffe36a;
     color: black;
     padding: 5px 20px;
+    width: 100px;
     margin-top: 20px;
     margin-bottom: 0px;
     border: none;
@@ -78,27 +88,15 @@ button {
     text-decoration: none;
 }
 .logo {
-    height: 180px;
-    margin-top: 10px;
+    width: 100%;
+    height: auto;
+    margin: auto;
+    margin-top: 15px;
 }
-
-@media (max-width: 575px) {
-    h4 {
-        font-size: 15px;
-    }
+.logo-container {
+    width: 100%;
 }
-
-@media (min-width: 576px) {
-    .logo {
-        height: 200px;
-        margin-top: 10px;
-    }
-}
-
-@media  (min-width: 768px) {
-    .logo {
-        height: 230px;
-    }
+@media  (min-width: 576px) {
     br {
         display: none;
     }
