--- a/main-order/billstyle.css
+++ b/main-order/billstyle.css
@@ -3,18 +3,19 @@
 }
 #bill-form {
     height: auto;
-    max-height: 80%;
+    max-height: 90%;
     position: fixed;
+    vertical-align: baseline;
     z-index: 1;
-    overflow-y: auto;
     padding: 10px;
     padding-bottom: 0;
     border: 1px solid #ffe36a;
     background-color: white;
 }
 .main-bill-form {
-    height: auto;
-    min-height: 200px;
+    position: relative;
+    height: 400px;
+    overflow-y: auto;
     padding: 15px;
     display: flex;
     flex-direction: column;
@@ -110,10 +111,13 @@
     }
 }
 
-/* @media (min-width: 768px) {
+@media (min-width: 1200px) {
     #bill-form {
-        position: absolute;
-        flex-direction: column;
-        overflow-y: auto;
+        width: 290px;
     }
-} */ 
+} 
+@media (max-width: 575.98px) {
+    .main-bill-form {
+        height: 320px;
+    }
+}
