--- a/main-order/billstyle.css
+++ b/main-order/billstyle.css
@@ -82,6 +82,9 @@
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     cursor: pointer;
 }
+#order-button:hover {
+    filter: brightness(105%);
+}
 .number-button {
     display: inline-block;
     font-family: Arial, Helvetica, sans-serif;
