--- a/admin/admin.css
+++ b/admin/admin.css
@@ -14,6 +14,10 @@
 }
 
 .menu-label{
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 0;
+    padding-left: 10%;
     display: none;
 }
 
