--- a/admin/admin.css
+++ b/admin/admin.css
@@ -48,3 +48,8 @@
 img {
     padding: 5px;
 }
+#product-content, #user-content {
+    /* max-height: 50%; */
+    height: 650px;
+    overflow-y: auto;
+}
