--- a/admin/admin.css
+++ b/admin/admin.css
@@ -43,7 +43,22 @@
     height: 60px;
 }
 .title {
-    padding: 11px 10px;
+    display: inline;
+}
+#icon-dropdown {
+    position: relative;
+    top : -10px;
+}
+.dropdown {
+    padding-top: 6px;
+    cursor: pointer;
+}
+.dropdown-item {
+    font-weight: 600;
+    font-size: 18px;
+}
+.media-content {
+    overflow-x: visible;
 }
 img {
     padding: 5px;
