--- a/admin/admin.css
+++ b/admin/admin.css
@@ -96,6 +96,7 @@ img {
 
 #nav-menu {
     background: #EFF0EB;
+    z-index: 2;
 }
 
 @media (max-width: 1087.98px) {
@@ -123,11 +124,17 @@ input[type="file"] {
 
 .field-label {
     max-width: 150px;
+    min-width: 140px;
+    padding-left: 10px; 
     padding-top: 0 !important;
 }
 
 .button {
-    max-width: 250px;
+    max-width: 220px;
     display: block !important;
     margin: auto;
+}
+
+.content {
+    z-index: 1 !important;
 }
