--- a/admin/admin.css
+++ b/admin/admin.css
@@ -71,6 +71,11 @@ img {
     padding: 5px;
 }
 
+#today-button { 
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100px;
+}
 #product-content,
 #user-content {
     /* max-height: 50%; */
