--- a/admin/admin.css
+++ b/admin/admin.css
@@ -86,6 +86,26 @@ img {
     height: 100px;
 }
 
+th { 
+    text-align: center !important;
+}
+
+td {
+    text-align: center !important;  
+    padding-top: 15px !important;
+}
+
+.action { 
+    padding-top: 9px !important;
+}
+
+.product-name { 
+    text-align: left !important;
+}
+
+#submit-button { 
+    margin-top: 20px !important;
+}
 .navbar-burger {
     margin-left: 0;
     margin-right: auto !important;
