Add page: Forget Password

--- a/client/src/pages/ForgetPassword/components/container/container.scss
+++ b/client/src/pages/ForgetPassword/components/container/container.scss
@@ -7,12 +7,6 @@
   background-color: rgb(255, 250, 240);
 }
 
-.forget-button-container {
-  width: 300px;
-  margin: auto;
-}
-
-#forget-label {
-  display: inline-block;
-  min-width: 150px;
+.forget-info {
+  margin: 0 0 20px;
 }
