--- a/client/src/components/footer/footer.scss
+++ b/client/src/components/footer/footer.scss
@@ -1,7 +1,7 @@
 .footer {
   position: fixed;
+  height: calc(100% - 670px);
   width: 100%;
-  height: 70px;
   bottom: 0;
-  background: rgb(255, 200, 85);
+  background: #2c3e50;
 }
