--- a/client/src/components/Home/css/billstyle.scss
+++ b/client/src/components/Home/css/billstyle.scss
@@ -1,6 +1,6 @@
 .home {
     #bill-form {
-        right: 0;
+        display: inline-block;
         height: auto;
         max-height: 90%;
         position: fixed;
