--- a/client/src/pages/admin.addUser/create-user.css
+++ b/client/src/pages/admin.addUser/create-user.css
@@ -3,7 +3,7 @@ html, body, #root {
 }
 
 .admin-create-user, .admin-products {
-  background: #ECF0F1;
+  background: #FBFCFC;
 }
 
 .admin-create-user {
